--- a/package.json
+++ b/package.json
@@ -24,5 +24,5 @@
   "bugs": {
     "url": "https://github.com/dhakerShiv/html-attributes-remover/issues"
   },
-  "homepage": "https://github.com/dhakerShiv/html-attributes-remover#readme",
+  "homepage": "https://github.com/dhakerShiv/html-attributes-remover#readme"
 }
